codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__presentation__adjacent_group_true.snap
---
source: tui/src/chatwidget/tests/presentation_tests.rs
assertion_line: 161
expression: normal
---
• External input · service/build ·
  message
  Original input body

  Report 世界 · service/build
  safe bold
  第二行
