codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__presentation__durable_notice_live_replay_identity_and_safe_render.snap
---
source: tui/src/chatwidget/tests/presentation_tests.rs
expression: display
---
• Notice · service/build
  Report 世界
  safe bold
  第二行
