codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__presentation__durable_notice_plain_linked_supplement_keeps_explicit_identity.snap
---
source: tui/src/chatwidget/tests/presentation_tests.rs
assertion_line: 132
expression: display
---
• Report 世界 · service/
  build
  Related MCP
  invocation: call-17
  (linked supplement)
  **safe bold**
  第二行
